tests/purs/warning/Kind-UnusedExplicitImport-2.out
Error found:
in module [33mMain[0m
at tests/purs/warning/Kind-UnusedExplicitImport-2.purs:6:1 - 6:39 (line 6, column 1 - line 6, column 39)

  The import of module [33mType.RowList[0m contains the following unused references:

    [33mRowList[0m

  It could be replaced with:

    [33mimport Type.RowList (RLProxy)[0m



See https://github.com/purescript/documentation/blob/master/errors/UnusedExplicitImport.md for more information,
or to contribute content related to this error.

